Add link to Cellular Automata Sequencer in navigation

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <div class="nav-links">
         <a href="index.html">Mandala</a>
         <a href="tonnetz.html">Tonnetz</a>
+        <a href="cas.html">Cellular Automata Sequencer</a>
     </div>
     <a href="https://buymeacoffee.com/metallicode?new=1" class="btn-support" target="_blank">Support</a>
 </nav>
