--- a/cas.html
+++ b/cas.html
@@ -30,9 +30,25 @@
         .track-slider label { font-size: 8px; color: #666; }
         input[type="file"] { font-size: 9px; color: #555; }
         input[type="file"]::file-selector-button { background: #222; border: 1px solid #444; color: #ddd; cursor:pointer; }
+    
+            /* NAV */
+        nav { position: fixed; top: 0; left: 0; right: 0; height: 40px; background: #1a1a1a; border-bottom: 1px solid #333; display: flex; align-items: center; justify-content: space-between; padding: 0 20px; z-index: 100; }
+        nav a { color: #aaa; text-decoration: none; font-size: 0.85em; transition: color 0.2s; }
+        nav a:hover { color: var(--accent); }
+        .nav-links { display: flex; gap: 20px; }
+        .btn-support { background: #ffdd00; color: #000; padding: 6px 12px; border-radius: 4px; font-weight: bold; font-size: 0.8em; }
+        .btn-support:hover { background: #ffe84d; color: #000 !important; }
     </style>
 </head>
 <body>
+    <nav>
+    <div class="nav-links">
+        <a href="index.html">Mandala</a>
+        <a href="tonnetz.html">Tonnetz</a>
+        <a href="cas.html">Cellular Automata Sequencer</a>
+    </div>
+    <a href="https://buymeacoffee.com/metallicode?new=1" class="btn-support" target="_blank">Support</a>
+</nav>
 
     <h1>Cellular Automata Sequencer</h1>
     
